--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "start": "next start",
     "lint": "next lint",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "cross-env NODE_OPTIONS=--openssl-legacy-provider build-storybook"
+    "build-storybook": "cross-env NODE_OPTIONS=--openssl-legacy-provider build-storybook",
+    "generate-client": "openapi --input ./src/types/openapi.json --output ./src/types --client axios"
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
@@ -19,6 +20,7 @@
     "@mui/material": "^5.11.16",
     "@reduxjs/toolkit": "^1.9.3",
     "@tanstack/react-query": "^4.28.0",
+    "@tanstack/react-query-devtools": "^4.29.1",
     "@types/node": "18.15.11",
     "@types/react": "18.0.31",
     "@types/react-dom": "18.0.11",
@@ -42,7 +44,8 @@
     "@storybook/react": "^6.5.16",
     "@storybook/testing-library": "^0.0.13",
     "babel-loader": "^8.3.0",
-    "msw": "^1.2.1"
+    "msw": "^1.2.1",
+    "openapi-typescript-codegen": "^0.24.0"
   },
   "msw": {
     "workerDirectory": "public"
