--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "next start",
     "lint": "next lint --dir src",
     "lint:fix": "npx eslint --fix src",
-    "format": "prettier --write --ignore-path .gitignore './src/**/*.{js,jsx,ts,tsx,json}'",
+    "format": "prettier --write --ignore-path .prettierignore './src/**/*.{js,jsx,ts,tsx,json}'",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "cross-env NODE_OPTIONS=--openssl-legacy-provider build-storybook",
     "generate-client": "openapi --input ./src/types/openapi.json --output ./src/types --client axios"
