--- a/package.json
+++ b/package.json
@@ -45,11 +45,15 @@
     "@storybook/manager-webpack5": "^6.5.16",
     "@storybook/react": "^6.5.16",
     "@storybook/testing-library": "^0.0.13",
+    "autoprefixer": "^10.4.14",
     "babel-loader": "^8.3.0",
     "eslint-config-prettier": "^8.8.0",
     "msw": "^1.2.1",
     "openapi-typescript-codegen": "^0.24.0",
-    "prettier": "^2.8.7"
+    "postcss": "^8.4.21",
+    "prettier": "^2.8.7",
+    "prettier-plugin-tailwindcss": "^0.2.7",
+    "tailwindcss": "^3.3.1"
   },
   "msw": {
     "workerDirectory": "public"
