--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "next lint --dir src",
     "lint:fix": "npx eslint --fix src",
     "format": "prettier --write --ignore-path .prettierignore './src/**/*.{js,jsx,ts,tsx,json}'",
+    "test": "jest --watch",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "cross-env NODE_OPTIONS=--openssl-legacy-provider build-storybook",
     "generate-client": "openapi --input ./src/types/openapi.json --output ./src/types --client axios"
@@ -45,9 +46,13 @@
     "@storybook/manager-webpack5": "^6.5.16",
     "@storybook/react": "^6.5.16",
     "@storybook/testing-library": "^0.0.13",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
     "autoprefixer": "^10.4.14",
     "babel-loader": "^8.3.0",
     "eslint-config-prettier": "^8.8.0",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "msw": "^1.2.1",
     "openapi-typescript-codegen": "^0.24.0",
     "postcss": "^8.4.21",
